<resources>
    <string name="app_name">Project 2</string>
    <string name="besbai">BesBai</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="welcome_to_besbai">Welcome To BesBai</string>
    <string name="search">Search</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="checkout">Checkout</string>
    <string name="admin">Admin</string>
    <string name="sign_out">Sign Out</string>
    <string name="create_account_page">Create Account</string>
    <string name="new_username">New Username</string>
    <string name="retype_password">Retype Password</string>
    <string name="create_user">Create User</string>
    <string name="search_for_product">Search for Product</string>
    <string name="search_hint">Search</string>
    <string name="welcome_admin">Welcome Admin</string>
    <string name="checkout_text">Checkout</string>
    <string name="Payment">Payment</string>
    <string name="Return">Return</string>
    <string name="products_message">Products</string>
    <string name="products">Products</string>
    <string name="add_item">Add Item</string>
    <string name="click_product_to_delete">Click Product to Delete</string>
    <string name="card_number">Card Number</string>
    <string name="PayNow">Pay Now</string>
    <string name="click_product_to_update">Click product to Update</string>
    <string name="delete_item">Delte Item</string>
    <string name="remove_user">Remove User</string>
    <string name="update_item">Update Item</string>
    <string name="click_user_to_remove">Click User to Remove</string>
</resources>