<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".New_account_activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/welcome_message"
        android:text="@string/welcome_to_besbai"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_margin="50dp"
        android:gravity="center" />

    <Button
        android:id="@+id/search_message"
        android:layout_width="160sp"
        android:layout_height="55sp"
        android:layout_below="@id/welcome_message"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/material_on_surface_stroke"
        android:text="@string/search" />

    <Button
        android:id="@+id/shopping_cart"
        android:layout_width="160sp"
        android:layout_height="55sp"
        android:layout_below="@id/search_message"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/material_on_surface_stroke"
        android:text="@string/shopping_cart" />

    <Button
        android:layout_width="160sp"
        android:layout_height="55sp"
        android:id="@+id/checkout"
        android:layout_below="@id/shopping_cart"
        android:text="@string/checkout"
        android:backgroundTint="@color/material_on_surface_stroke"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp" />

    <Button
        android:layout_width="160sp"
        android:layout_height="55sp"
        android:id="@+id/admin"
        android:layout_below="@id/checkout"
        android:text="@string/admin"
        android:backgroundTint="@color/material_on_surface_stroke"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp" />

    <Button
        android:id="@+id/sign_out"
        android:layout_width="119dp"
        android:layout_height="59dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="276dp"
        android:layout_marginBottom="23dp"
        android:backgroundTint="@color/material_on_surface_stroke"
        android:text="@string/sign_out" />


</RelativeLayout>