<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".New_account_activity">

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/shopping_cart"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />


    <ListView
        android:id="@+id/cart_items"
        android:layout_width="match_parent"
        android:layout_height="489dp"
        android:layout_above="@id/checkout"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="34dp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        android:textStyle="bold"
        android:fadeScrollbars="true"
        android:scrollbars = "vertical"
        />

    <Button
        android:id="@+id/sign_out"
        android:layout_width="119dp"
        android:layout_height="59dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="276dp"
        android:layout_marginBottom="23dp"
        android:backgroundTint="@color/material_on_surface_stroke"
        android:text="@string/sign_out" />

    <Button
        android:id="@+id/checkout"
        android:layout_width="119dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="267dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="23dp"
        android:backgroundTint="@color/material_on_surface_stroke"
        android:text="@string/checkout" />


</RelativeLayout>