<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".New_account_activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/welcome_message"
        android:text="@string/checkout_text"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_margin="50dp"
        android:gravity="center" />


    <EditText
        android:id="@+id/cardNumberField"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="544dp"
        android:gravity="left"
        android:hint="@string/card_number"
        android:inputType="number" />

    <EditText
        android:id="@+id/expiryDateField"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="209dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="447dp"
        android:gravity="left"
        android:hint="Expiry Date (MM/YY)"
        android:inputType="date" />

    <EditText
        android:id="@+id/cvvField"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="370dp"
        android:gravity="left"
        android:hint="CVV"
        android:inputType="number" />

    <Button
        android:id="@+id/return_button"
        android:layout_width="119dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="276dp"
        android:layout_marginBottom="22dp"
        android:backgroundTint="@color/material_on_surface_stroke"
        android:text="@string/Return" />

    <Button
        android:id="@+id/payment"
        android:layout_width="119dp"
        android:layout_height="59dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="267dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="23dp"
        android:backgroundTint="@color/material_on_surface_stroke"
        android:text="@string/PayNow" />


</RelativeLayout>
